package nl.han.pexe.domain;

public record UserData(String name, String email) {
}
